# frakt

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
cli/: Cargo.toml  all.html  index.html  sidebar-items.js
cli/operation/: fn.parse_to_address.html  index.html  sidebar-items.js
cli/parser/: derive.Parser.html  enum.CliArgs.html  index.html  sidebar-items.js  struct.CliArgs.html  struct.CliClientArgs.html  struct.CliServerArgs.html  trait.Parser.html
cli/src/: lib.rs  operation.rs  parser.rs
client/: Cargo.toml  all.html  fn.main.html  index.html  sidebar-items.js
client/fractal_generation/: fn.color.html  fn.generate_fractal_set.html  fn.hsl_to_rgb.html  index.html  sidebar-items.js
client/image/: fn.open_image.html  index.html  sidebar-items.js
client/julia/: fn.generate_julia_set.html  fn.iterations_to_color.html  index.html  sidebar-items.js
client/networking/: fn.connect_to_server.html  fn.convert_to_pixel_data.html  fn.process_fragment_task.html  fn.receive_fragment_task.html  fn.save_fractal_image.html  fn.send_fragment_result.html  fn.send_request.html  index.html  sidebar-items.js
client/src/: client.rs  fractal_generation.rs  image.rs  julia.rs  main.rs  mod.rs  networking.rs
complex/: Cargo.toml  all.html  index.html  sidebar-items.js
complex/burning_ship_impl/: index.html  sidebar-items.js  trait.BurningShipOperations.html
complex/complex_operations/: index.html  sidebar-items.js  trait.ComplexOperations.html
complex/fractal_operations/: index.html  sidebar-items.js  trait.FractalOperations.html
complex/iterated_sinz_impl/: index.html  sidebar-items.js  trait.IteratedSinZOperations.html
complex/julia_descriptor_impl/: index.html  sidebar-items.js  trait.JuliaOperations.html
complex/mandelbrot_descriptor_impl/: index.html  sidebar-items.js  trait.MandelbrotOperations.html
complex/newtonraphsonz_descriptor_impl/: index.html  sidebar-items.js  trait.NewtonRaphsonOperations.html
complex/src/: burning_ship_impl.rs  complex_impl.rs  complex_operations.rs  fractal_operations.rs  iterated_sinz_impl.rs  julia_descriptor_impl.rs  lib.rs  mandelbrot_descriptor_impl.rs  newtonraphsonz_descriptor_impl.rs
server/: Cargo.toml  all.html  derive.Deserialize.html  derive.Serialize.html  fn.main.html  index.html  sidebar-items.js  trait.Deserialize.html  trait.Serialize.html
server/handler/: fn.handle_client.html  index.html  sidebar-items.js
server/image/: index.html
server/messages/: index.html  sidebar-items.js
server/messages/fragment_maker/: fn.create_task_for_request.html  fn.create_tasks.html  fn.generate_range.html  fn.process_result.html  index.html  sidebar-items.js
server/messages/handler/: fn.handle_client.html  index.html
server/messages/serialization/: fn.deserialize_message.html  index.html  sidebar-items.js
server/services/: index.html  sidebar-items.js
server/services/connect/: fn.connect.html  index.html
server/services/reader/: fn.get_response.html  fn.read_message.html  index.html  sidebar-items.js
server/services/server_runner/: fn.run_server.html  index.html
server/services/write/: fn.write.html  fn.write_img.html  index.html  sidebar-items.js
server/src/: handler.rs  lib.rs  main.rs  mod.rs
server/src/messages/: fragment_maker.rs  handler.rs  mod.rs  serialization.rs
server/src/services/: mod.rs  (+4 more)
shared/: Cargo.toml  all.html  index.html  sidebar-items.js
shared/logger/: fn.init_logger.html  index.html
shared/src/: lib.rs
shared/types/: index.html  sidebar-items.js
shared/utils/: index.html  sidebar-items.js
(+223 files in other folders)
