[package]
name = "client"
version = "0.1.0"
authors = ["James <jabib@myges.fr>", "Ronan <rkielt@myges.fr>", "Charles <ccretois@myges.fr>", "Samira <sseddar@myges.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.7", features = [] }
log = "0.4.20"
complex = { path = "../complex" }
shared = { path = "../shared" }
server = { path = "../server" }
cli = { path = "../cli" }
