[package]
name = "server"
version = "0.1.0"
authors = ["James <jabib@myges.fr>", "Ronan <rkielt@myges.fr>", "Charles <ccretois@myges.fr>", "Samira <sseddar@myges.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
complex = { path = "../complex" }
shared = { path = "../shared" }
cli = { path = "../cli" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json ="1.0.108"
log = "0.4.20"

[lib]
path = "src/lib.rs"
