[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json ="1.0.108"
env_logger = "0.10.1"
log = "0.4.20"
image = { version = "0.24.7", features = [] }

[dev-dependencies]
tempfile = "3.8.1"
